--- a/src/popups/InfoFPWPopup/InfoFPWPopup.scss
+++ b/src/popups/InfoFPWPopup/InfoFPWPopup.scss
@@ -1,4 +1,8 @@
 .wkp-infofpw-popup {
+  width: 300px;
+  max-height: 220px;
+  overflow-y: auto;
+
   .wkp-infofpw-popup-images {
     text-align: center;
 
@@ -6,13 +10,4 @@
       max-width: 270px;
     }
   }
-}
-
-.rs-popup > div {
-  width: 300px;
-}
-
-.wkp-feature-information-body {
-  max-height: 220px;
-  overflow-y: auto;
 }
